test/issue-3166/negative_tests/Issue3166JobNeg5-v1.0.qjob
# -*- mode: qore; indent-tabs-mode: nil -*-

# name: issue-3166neg5-job
# class-name: Issue3166JobNeg5
# version: 1.0
# desc: example job with configuration items
# author: Qore Technologies, s.r.o.
# schedule: * * * * *
# define-group: test: test interfaces
# define-group: regression: regression test group
# groups: test, regression

%new-style
%strict-args
%require-types
%enable-all-warnings

class Issue3166JobNeg5 inherits QorusJob {
    run() {
    }

    private *hash<string, hash<ConfigItemInfo>> getConfigItemsImpl() {
        return {
            "issue-3166-job-config-1": <ConfigItemInfo>{
                "type": "*date",
                "default_value": NOTHING,
                "description": "This is an example configuration item of type int",
                "strictly_local": True,
                "allowed_values": (now(), date("2001-01-01T15:35:23"))
            },
        };
    }
}
# END